Fix global nav item alignment

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -119,6 +119,7 @@ a:hover {
 /* Nav bar */
 nav {
 	display: flex;
+	align-items: flex-start;
 	overflow: scroll;
 	gap: .25em;
 }
